manifests/applications/mattermost/namespace.yaml
# Mattermost namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    name: mattermost
